Commit For Pk-1815

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/ReturnAndExchangeModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/ReturnAndExchangeModal.razor
@@ -119,7 +119,7 @@
         </ModalBody>
         <ModalFooter>
             <Button Color="Color.Secondary" Clicked="@Hide">@L["Cancel"]</Button>
-            <Button Color="Color.Danger" Clicked="@OnSubmit">@L[IsReturn ? "ReturnOrder" : "ExchangeOrder"]</Button>
+            <Button Color="Color.Danger" Clicked="@OnSubmit">@L[IsReturn ? "ReturnOrder" : "ExchangeOrderButton"]</Button>
         </ModalFooter>
     </ModalContent>
 </Modal>
