Commit for Pk-1817 & Pk-1819

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFeeOrderRecord.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFeeOrderRecord.razor
@@ -575,7 +575,7 @@
                                     <TableRowCell>@(record?.OrderNumber ?? "Unknown")</TableRowCell>
                                     <TableRowCell>
                                         <Badge Color="@(result.Success ? Color.Success : Color.Danger)">
-                                            @(result.Success ? L["Success"] : L["Failed"])
+                                            @(result.Success ? L["SuccessfulDeductions"] : L["Failed"])
                                         </Badge>
                                     </TableRowCell>
                                     <TableRowCell>
