--- a/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/TenantDeliveryFee.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/TenantDeliveryFee.razor
@@ -409,6 +409,18 @@
                     </DisplayTemplate>
                 </DataGridColumn>
             </DataGridColumns>
+             <NextPageButtonTemplate>@L["NextPage"]</NextPageButtonTemplate>
+    <PreviousPageButtonTemplate>@L["PrevPage"]</PreviousPageButtonTemplate>
+    <LastPageButtonTemplate>@L["LastPage"]</LastPageButtonTemplate>
+    <FirstPageButtonTemplate>@L["FirstPage"]</FirstPageButtonTemplate>
+            <TotalItemsTemplate>
+                @(string.Format(
+                         L["Range"],
+                         ((CurrentPage - 1) * PageSize) + 1,
+                         (CurrentPage * PageSize > TotalCount ? TotalCount : CurrentPage * PageSize),
+                         TotalCount
+                         ))
+            </TotalItemsTemplate>
         </DataGrid>
     </CardBody>
 </Card>
