#PK-1836 TCat Fee Configuration UI

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/EcPayPaymentFeeConfigurations.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/EcPayPaymentFeeConfigurations.razor
@@ -1,5 +1,4 @@
-﻿<link href="css/platform-fee-settings.css" rel="stylesheet" />
-@inherits PikachuComponentBase
+﻿@inherits PikachuComponentBase
 
 <div class="platform-tab">
     <div class="platform-tab-header">
