--- a/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/TenantFeeSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/TenantFeeSetting.razor
@@ -8,6 +8,7 @@
 @using Kooco.Pikachu.TenantDeliveryFees;
 @using Kooco.Pikachu.EnumValues;
 @using Volo.Abp.TenantManagement;
+<link href="css/platform-fee-settings.css" rel="stylesheet" />
 @inherits PikachuComponentBase
 @using Microsoft.Extensions.Localization;
 @inject ITenantDeliveryFeeAppService TenantDeliveryFeeAppService
@@ -27,11 +28,15 @@
     <Tabs RenderMode="TabsRenderMode.LazyLoad" SelectedTab="EcPayPaymentFees">
         <Items>
             <Tab Name="EcPayPaymentFees">@L["EcPayPaymentFees"]</Tab>
+            <Tab Name="TCatPaymentFees">@L["TCatPaymentFees"]</Tab>
             <Tab Name="LogisticFees">@L["LogisticFees"]</Tab>
         </Items>
         <Content>
             <TabPanel Name="EcPayPaymentFees">
                 <EcPayPaymentFeeConfigurations TenantId="TenantId"></EcPayPaymentFeeConfigurations>
+            </TabPanel>
+            <TabPanel Name="TCatPaymentFees">
+                <TCatPaymentFeeConfigurations TenantId="TenantId"></TCatPaymentFeeConfigurations>
             </TabPanel>
             <TabPanel Name="LogisticFees">
                 <LogisticFeeConfiguration TenantId="TenantId"></LogisticFeeConfiguration>
