Commit for Pk-1838

--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -88,6 +88,8 @@
                             <FilePicker @ref="FilePickerCustom"
                                         FilePickerLocalizer="(key, args) => LocalizeFilePicker(key, args)"
                                         Multiple
+                                        
+                                         Placeholder="@L["NoFileChosen"]"
                                         Changed="OnFileUploadAsync"
                                         ShowMode="FilePickerShowMode.List"
                                         Accept="@(string.Join(", ", Constant.ValidImageExtensions))">
