#PK-1813 Backend logic for EcPay Payout

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/TCatPaymentFeeConfigurations.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/TCatPaymentFeeConfigurations.razor
@@ -47,7 +47,7 @@
                                         <span class="ant-input-group-addon">$</span>
                                     }
 
-                                    <AntDesign.InputNumber TValue="double"
+                                    <AntDesign.InputNumber TValue="decimal"
                                                            @bind-Value="item.Amount"
                                                            Class="no-stepper" />
 
