--- a/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/EcPayPaymentFeeConfigurations.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantDeliveryFees/EcPayPaymentFeeConfigurations.razor
@@ -56,7 +56,7 @@
                                             <span class="ant-input-group-addon">$</span>
                                         }
 
-                                        <AntDesign.InputNumber TValue="double"
+                                        <AntDesign.InputNumber TValue="decimal"
                                                                @bind-Value="item.Amount"
                                                                Class="no-stepper" />
 
